examples/type_system/failing/122_hash_missing_close_brace.flx
let values = {one: 1, two: 2
let after = 3
